--- a/main.css
+++ b/main.css
@@ -5,5 +5,11 @@ h1 {
     
     color: brown
 }
-
+@media only screen and (max-width: 500px) {
+   Body {
+        font-size: 20px
+    
+    
+    }
+}
 
