--- a/index_files/main.css
+++ b/index_files/main.css
@@ -3,7 +3,7 @@ h3 {
 }
 h1 {
     
-    color: gold
+    color: brown
 }
 @media only screen and (max-width: 500px) {
    Body {
@@ -18,8 +18,4 @@ p {
 head {
     background-color: brown
 
-}
-body {
-    background-color: brown
-    
 }
